5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4443/executions/1646_2728.log
== TEST (2019-04-16 11:57:33) 
-- CODE:
#Percurso da vaigem em Km e tipo de carro
km = float(input("digite o percurso: "))
carro = input("digite o tipo de carro (A ou B): ")

#consumo estimado:
A = km/8
B = km/12

if(carro = A):
	print(A)

else:
	print(B)	
-- ERROR:
File "XXXX", line 9
    if(carro = A):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:58:24) 
-- CODE:
#Percurso da vaigem em Km e tipo de carro
km = float(input("digite o percurso: "))
carro = input("digite o tipo de carro (A ou B): ")

#consumo estimado:
A = km/8
B = km/12

if(carro == "A"):
	print(A)

else:
	print(B)	
-- OUTPUT:
5.416666666666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 11:58:40) 
-- CODE:
#Percurso da vaigem em Km e tipo de carro
km = float(input("digite o percurso: "))
carro = input("digite o tipo de carro (A ou B): ")

#consumo estimado:
A = km/8
B = km/12

if(carro == "A"):
	print(A)

else:
	print(B)	
-- EXECUTION TIME:
0.142512
-- TEST CASE 1:
---- input:
65
B

---- correct output:
5.42
---- user output:
5.416666666666667
-- TEST CASE 2:
---- input:
65
A
---- correct output:
8.12
---- user output:
8.125
-- TEST CASE 3:
---- input:
200
A
---- correct output:
25.0
---- user output:
25.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:59:20) 
-- CODE:
#Percurso da vaigem em Km e tipo de carro
km = float(input("digite o percurso: "))
carro = input("digite o tipo de carro (A ou B): ")

#consumo estimado:
A = km/8
B = km/12

if(carro == "A"):
	print(round(A, 2))

else:
	print(round(B, 2))	
-- OUTPUT:
5.42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 11:59:31) 
-- CODE:
#Percurso da vaigem em Km e tipo de carro
km = float(input("digite o percurso: "))
carro = input("digite o tipo de carro (A ou B): ")

#consumo estimado:
A = km/8
B = km/12

if(carro == "A"):
	print(round(A, 2))

else:
	print(round(B, 2))	
-- EXECUTION TIME:
0.198013
-- TEST CASE 1:
---- input:
65
B

---- correct output:
5.42
---- user output:
5.42
-- TEST CASE 2:
---- input:
65
A
---- correct output:
8.12
---- user output:
8.12
-- TEST CASE 3:
---- input:
200
A
---- correct output:
25.0
---- user output:
25.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
